Some more content on time

--- a/source/calendar.html.slim
+++ b/source/calendar.html.slim
@@ -10,10 +10,72 @@ h3 = current_page.data.title
     | &mdash; Soxora,
     span.reference< Fragment 43
 
-p The rhythms of daily life on Nuvenel are regulated by alternating periods of light and darkness approximately twelve hours in length. However, astronomically speaking a day on Elubar lasts 72 hours, for that is the period of time from sunrise to sunrise.
+p The rhythms of life on Elubar are governed by four celestial bodies. The sun, known as Anorel in the elvish tongue used by sages and philsophers, is the primary source of light. But on the continent of Nuvenel, there is another massive heavenly body always visible in the sky. This the elves call Gaervenel, and it appears as a huge disc, coppery-red in color.
 
-p From sunrise to sunset takes 36 hours, but the middle portion is a period of eclipse, when the great heavenly body known as Gaervenel obscures the sun. During this period, some light still reaches Nuvenel, but even in clear conditions the light is dim at best.
+p Two smaller celestial bodies, like moons, are also regularly visible from Nuvenel. These are called Haerdh and Cúranel. Haerdh is green, blue, and white in color, and follows a regular cycle that repeats every two Elubaran days. Cúranel is silvery-white, slightly smaller, and more mysterious.
 
-p Once the sun sets, it will not rise again for another 36 hours. During the middle portion of this period, Gaervenel reflects enough light on Nuvenel that even those without darkvision can see. This period is sometimes called "Gaervenel's lens", or simply "lens". The light during lens is not as bright as daylight.
+h4 Day &amp; Night
 
-p Most creatures wake during the two periods of daylight and during lens, and sleep during the two periods of darkness and eclipse. Because these rhythms, many common folk happily apply the name "day" to all three periods of light, and "night" to all three periods of darkness, though scholars and sages are more precise.
+p Astronomically speaking a day on Elubar lasts 72 hours &mdash; the interval from sunrise to sunrise. However, both Gaervenel and the sun play a role in regulating daily cycles of light and darkness.
+
+p On the continent of Nuvenel, the astronomical day can be divided into two periods of bright light, two periods of darkness, and two periods of dim light. The interval from sunrise to sunset last 36 hours, but it is divided in two by a period of eclipse, when Gaervenel obscures the sun and darkens the land. During this period of eclipse, some sunlight still reaches Elubar, but even in the clearest of conditions the light is dim at best.
+
+p Once the sun sets, it will not rise again for another 36 hours. During the middle portion of this period, Gaervenel reflects enough light on Nuvenel that even those without darkvision can see. This period is sometimes called "Gaervenel's lens", or simply "lens". The light during lens is dimmer than daylight, and is comparable to the light during eclipse.
+
+p Most creatures wake during the two periods of daylight and during lens, and sleep during the two periods of darkness and eclipse. Because of these rhythms, many common folk happily apply the name "day" to all three waking periods, and "night" to the rest. Scholars and sages are more precise.
+
+p Eclipse and lens are shorter in duration than the other periods of light and darkness. The temperate regions of Nuvenel have seasons, but only the temperature changes with the seasons on Elubar, not the relative lengths of the periods of light and darkness.
+
+p All of this is summarized in the Cycles of Light and Darkness table.
+
+table
+  caption Cycles of Light and Darkness
+  thead
+    tr
+      th Period
+      th Duration
+      th Colloquial Name
+      th Scholarly Name
+      th Lighting Conditions
+  tbody
+    tr
+      td Sunrise to eclipse
+      td 13.5 hours
+      td Dawnday
+      td.elvish Herior
+      td bright
+    tr
+      td Eclipse
+      td 9 hours
+      td Eclipse
+      td.elvish Menelnuin
+      td dim
+    tr
+      td Eclipse to sunset
+      td 13.5 hours
+      td Eventide
+      td.elvish Teleor
+      td bright
+    tr
+      td Sunset to lens
+      td 13.5 hours
+      td Nightfel
+      td.elvish Aduial
+      td dark
+    tr
+      td Gaervenel's lens
+      td 9 hours
+      td Lens
+      td.elvish Menelor
+      td dim
+    tr
+      td Lens to sunrise
+      td 13.5 hours
+      td Overnight
+      td.elvish Minuial
+      td dark
+
+h4 Months &amp; Years
+p A year on Elubar lasts 130 astronomical (72 hour) days, divided in the elvish calendar into 13 months of 10 days each. These months are supposedly governed by the cycles of Cúranel, according to the philosophers, but the relationship is obscure at best.
+
+p In most cultures on Nuvenel, it is customary that every second lens is a time of rest, when Haerdh disappears behind Gaervenel. Few think in terms of "weeks" on Nuvenel.
