--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -5,5 +5,5 @@ title: Gaervenel &amp; Elubar
 h1 = current_page.data.title
 
 ul
-  - sitemap.resources.select { |resource| resource.data.title }.each do |resource|
+  - sitemap.resources.select { |resource| resource.data.title && resource != current_page }.each do |resource|
     li = link_to(resource.data.title, resource, relative: true)
