Some useful style additions

--- a/source/stylesheets/_5e_fonts.scss
+++ b/source/stylesheets/_5e_fonts.scss
@@ -51,7 +51,7 @@
 
 @font-face {
     font-family: "Scaly Sans Italic";
-    src: url("/fonts/5e/Scaly Sans/Scaly Sans.otf") format("opentype");
+    src: url("/fonts/5e/Scaly Sans/Scaly Sans Italic.otf") format("opentype");
     font-weight: normal;
     font-style: italic;
 }
