Revise wording about duration of light & dark periods

--- a/source/calendar.html.slim
+++ b/source/calendar.html.slim
@@ -24,9 +24,7 @@ p Once the sun sets, it will not rise again for another 36 hours. During the mid
 
 p Most creatures wake during the two periods of daylight and during lens, and sleep during the two periods of darkness and eclipse. Because of these rhythms, many common folk happily apply the name "day" to all three waking periods, and "night" to the rest. Scholars and sages are more precise.
 
-p Eclipse and lens are shorter in duration than the other periods of light and darkness. The temperate regions of Nuvenel have seasons, but only the temperature changes with the seasons on Elubar, not the relative lengths of the periods of light and darkness.
-
-p All of this is summarized in the Cycles of Light and Darkness table.
+p Eclipse and lens are shorter in duration than the other periods of light and darkness. All of this is summarized in the Cycles of Light and Darkness table, which shows the duration of each period on the equinox. During summer, the periods of daylight grow longer, and during winter there is more darkness. The durations of eclipse and lens vary a small but mostly unnoticeable amount, by comparison.
 
 table
   caption Cycles of Light and Darkness
