--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -144,7 +144,7 @@ table + h3, table + h4 {
     font-weight: bolder;
 }
 
-.spell, .magic, .reference, .elvish {
+.spell, .magic, .reference, .elvish, .i {
     font-family: 'Bookinsanity Italic', serif;
     font-style: italic;
 }
