Some edits to campaign pitch

--- a/source/behind-the-wall.html.slim
+++ b/source/behind-the-wall.html.slim
@@ -7,7 +7,9 @@ p A great wall lined with watchtowers stands on the northern frontier of what wa
 h3 The Empire is Dead
 p This is the year in which the city-state of Shassyr granted all races equal rights of citizenship and reformed the ruling council to include non-dragonborn. In the north, it has been decades since Shassyr has exerted its influence. Today, it is seen as a symbol of moral decline and decadence, a distant irrelevance.
 
-h3 Rathbaran
+p In the north, the lands of the former empire are less diverse than the south. Elves, gnomes, and dragonborn make up the bulk of the population in the city-states of the north, with halflings and dwarves also constituting sizable but less assimilated minorities. Other races are seen as non-native southerners, and are more likely to face harassment or discrimination.
+
+h3 Refugees in Rathbaran
 p The city-state of Rathbaran, in the Druinnagol forest, is the northernmost city in the elven ancestral lands, and the closest to the wall. It is an independent city-state ruled by a single governor and a ruling council appointed by the governor. The current governor is a bronze dragonborn named Otixan, who succeeded his predecessor a mere two years go.
 
 p Under the previous governor, Rathbaran experienced an influx of refugees fleeing the unsafe countryside south of the wall. That governor did little to help them, forcing most to live in unpoliced slums outside the walls of the city. For years, relations between the refugees and the citizens of Rathbaran grew tense.
@@ -15,6 +17,10 @@ p Under the previous governor, Rathbaran experienced an influx of refugees fleei
 p Otixan has vowed to remedy the situation. In his first two years in power, he has formed a militia to take back a segment of the wall, and protect the lands behind it. He has staffed this militia with a few volunteers and much larger numbers of conscripts. Some grumble that this conscription effort is really just a way to move refugees and other undesirables away from the city, but many in Rathbaran are relieved that someone is finally doing something about the raiders from beyond the wall.
 
 h3 Your Watch Begins
-p Whether you volunteered, were conscripted, or were sent as a punishment for a crime (even if that crime was just being a refugee), you are now a part of Otixan's militia. You have been sent to a camp at one of the watchtowers one the wall, where the dragonborn lieutentant Lilohym noticed your potential and assigned you to a strike force. For a month or two you have been guarding the wall and responding to an occasional raiding party that slips past.
+p Whether you volunteered, were conscripted, or were sent as a punishment for a crime (even if that crime was just being a refugee), you are now a part of Otixan's militia. You have been sent to a camp at one of the watchtowers on the wall, where the dragonborn lieutentant Lilohym noticed your potential and assigned you to a strike force. For a month or two you have been guarding the wall and responding to an occasional raiding party that slips past.
 
-p.emph Rathbaran is poised to become a new power in the north, if the hordes beyond the wall can be kept at bay. But all depends on a ragtag militia of conscripts and criminals. Will you be the heroes Otixan needs? Or will you throw off the shackles of compulsory service and forge your own path? What do you owe to the people of Rathbaran and the north?
+p Recently, orc raids behind the wall have become increasingly common, despite the militia's attempts at vigilance. Otixan grows increasingly impatient with his commanders, who are forced to look inward and fight rearguard skirmishes, even as scouts report signs of increased hobgoblin activity beyond the wall.
+
+p
+  | Rathbaran is poised to become a new power in the north, if the hordes beyond the wall can be kept at bay. But all depends on a ragtag militia of conscripts and criminals.
+  span.emph< Will you be the heroes Otixan needs? Or will you throw off the shackles of compulsory service and forge your own path? What do you owe to the people of Rathbaran and the north?
