Expand Veinunth's portfolio

--- a/source/religion.html.slim
+++ b/source/religion.html.slim
@@ -69,7 +69,7 @@ table
     tr
       td Veinunth
       td copper
-      td Language, art, music, creativity
+      td Language, art, craft, language, music, creativity
       td Forge, Knowledge
     tr
       td Orthonax
