--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -148,6 +148,38 @@ table + h3, table + h4 {
     }
 }
 
+.read-aloud {
+    position: relative;
+    background-color: $light-grey;
+    margin: 0.8rem 3px;
+    padding: 0.8rem;
+    border-left: 3px solid $dark-grey;
+    border-right: 3px solid $dark-grey;
+    .circle {
+        position: absolute;
+        height: 6px;
+        width: 6px;
+        background-color: $dark-grey;
+        border-radius: 50%;
+        z-index: 8;
+    }
+    .top {
+        top: -1.5px;
+    }
+    .bottom {
+        bottom: -1.5px;
+    }
+    .left {
+        left: -4.5px;
+    }
+    .right {
+        right: -4.5px;
+    }
+}
+
+.stat-block {
+}
+
 .emph, .strong, .b {
     font-weight: bolder;
 }
