Add calendar worksheet

--- a/source/adventures/supply-lines.html.slim
+++ b/source/adventures/supply-lines.html.slim
@@ -1,6 +1,7 @@
 ---
 title: Supply Lines
 adventure: true
+public: false
 ---
 h2 = current_page.data.title
 p This adventure will introduce the party to their role as a strike force working for Otixan's militia on the great wall. They will be assigned a mission to recover a shipment of supplies for the milita, which was ambushed by an orc raiding party. Along the way, they will discover a hidden fortified settlement, where non-dragonborn are attempting to carve a place for themselves in the north, free from the influence of the old imperial elite. The party will be forced to choose sides &mdash; will they return to their watch on the wall, in the service of Rathbaran, or will they throw off the shackles of the past and throw in their lot with the outcasts.
