--- a/source/behind-the-wall.html.slim
+++ b/source/behind-the-wall.html.slim
@@ -1,5 +1,6 @@
 ---
 title: Behind the Wall
+public: true
 ---
 h2 = current_page.data.title
 p A great wall lined with watchtowers stands on the northern frontier of what was once the Zhusan Empire, stretching from the foothills of the Fanthaennen mountains in the east thousands of miles to the west. The wall has crumbled in many places, and the fires of the watchtowers have not been lit for centuries. The orcish and goblinoid hordes are no longer kept at bay; for decades the lands have been raided and ravaged. Many who once worked the land in the north have fled to nearby city-states as refugees, or turned to local feudal warlords for protection.
