--- a/source/worksheets/reference.html.slim
+++ b/source/worksheets/reference.html.slim
@@ -1,11 +1,11 @@
 ---
 title: Rules Reference
 ---
-.page.columns.tall
+section.columns
   h3.span-all Conditions
   .group
     h5 Blinded
-    ul.small
+    ul
       li
         | Can't see; auto-fail
         span.emph<> ability checks
@@ -23,9 +23,9 @@ title: Rules Reference
         |.
   .group
     h5 Charmed
-    ul.small
+    ul
       li
-        | Can't attack the charmer or target them with harmful.small magic or abilities.
+        | Can't attack the charmer or target them with harmful magic or abilities.
       li
         | Charmer has
         span.emph<> advantage
@@ -34,14 +34,14 @@ title: Rules Reference
         | to influence you.
   .group
     h5 Deafened
-    ul.small
+    ul
       li
         | Can't hear; auto-fail
         span.emph<> ability checks
         | using hearing.
   .group
     h5 Frightened
-    ul.small
+    ul
       li
         span.emph> Disadvantage
         | on
@@ -53,7 +53,7 @@ title: Rules Reference
         | Can't willingly move closer to the source of your fear.
   .group
     h5 Grappled
-    ul.small
+    ul
       li
         | Your speed is 0 and you can't benefit from any bonus to speed.
       li
@@ -62,12 +62,12 @@ title: Rules Reference
         | Ends if you are removed from the reach of the grappler.
   .group
     h5 Incapacitated
-    ul.small
+    ul
       li
         | Can't take actions or reactions.
   .group
     h5 Invisible
-    ul.small
+    ul
       li
         | Can't be seen without magic or special senses. You are heavily obscured for the purpose of hiding. Your location may still be detected.
       li
@@ -83,7 +83,7 @@ title: Rules Reference
         |.
   .group
     h5 Paralyzed
-    ul.small
+    ul
       li
         span.emph Incapacitated
         |; can't move or speak.
@@ -100,7 +100,7 @@ title: Rules Reference
         | Any attack that hits you is an automatic critical if the attacker is within 5 feet.
   .group
     h5 Petrified
-    ul.small
+    ul
       li
         | Transformed into a solid, inanimate substance. Weight increases 10x, and you don't age.
       li
@@ -124,7 +124,7 @@ title: Rules Reference
         | Immune to poison and disease. Current effects are suspended, not cured.
   .group
     h5 Poisoned
-    ul.small
+    ul
       li
         span.emph> Disadvantage
         | on
@@ -134,7 +134,7 @@ title: Rules Reference
         |.
   .group
     h5 Prone
-    ul.small
+    ul
       li
         | Can only crawl or stand up as movement.
       li
@@ -152,7 +152,7 @@ title: Rules Reference
         | otherwise.
   .group
     h5 Restrained
-    ul.small
+    ul
       li
         | Your speed is 0 and you can't benefit from any bonus to speed.
       li
@@ -173,7 +173,7 @@ title: Rules Reference
         |.
   .group
     h5 Stunned
-    ul.small
+    ul
       li
         span.emph Incapacitated
         |; can't move; speak only falteringly.
@@ -188,7 +188,7 @@ title: Rules Reference
         |.
   .group
     h5 Unconscious
-    ul.small
+    ul
       li
         span.emph Incapacitated
         |; can't move or speak.
@@ -210,134 +210,8 @@ title: Rules Reference
       li
         | Any attack that hits you is an automatic critical if the attacker is within 5 feet.
 
-.page.columns.tall
-  h3 Movement
-  p
-    | One travel period is
-    span.emph< 4 hours
-    |. A party can normally travel 3 periods in a day, after which they need to rest overnight or risk exhaustion.
-  table
-    caption Travel Distance per Period
-    thead
-      tr
-        th Pace
-        th Distance
-        th Effect
-    tbody
-      tr
-        td Fast
-        td 10 miles
-        td Disadvantage on Wisdom (Perception)
-      tr
-        td Normal
-        td 8 miles
-        td &mdash;
-      tr
-        td Slow
-        td 6 miles
-        td Can stealth
-  h5 Difficult Terrain
-  p
-    | Dense forests, deep swamps, steep mountains, ice-covered ground, or other difficult terrain halves distance traveled.
-  h5 Forced March
-  p
-    | The party can continue traveling after 3 consecutive periods, but they must make a DC 10 Con save or suffer a level of exhaustion. Each additional period increases the save DC by 5.
-
-  h5 Climbing, Swimming, Crawling
-  p
-    | Climbing or Swimming takes twice as much movement as walking unless a creature has a climb or swim speed.
-  p
-    | Crawling takes twice as much movement as walking.
-  h5 Jumping
-  p
-    span.emph> High jump
-    | 3 + Str mod ft.;
-    span.emph<> long jump
-    | Str score ft. &#xbd; distance without 10 ft. running start.
-  p
-    | May require DC 10 Dex save to land in difficult terrain without falling prone.
-  h5 Standing
-  p
-    | Costs &#xbd; speed to stand up from prone.
-  h5 Squeezing
-  p
-    | Squeezing through a small space costs double movement, you have disadvantage on Dex saves, and attack rolls against you have advantage.
-
-  h3 Exhaustion
-  p Exhaustion is measured in six levels. The effects are cumulative. Finishing a long rest reduces a creature's exhaustion level by 1, provided that the creature has also ingested some food and drink.
-  table
-    caption Exhaustion Effects
-    thead
-      tr
-        th Level
-        th Effect
-    tbody
-      tr
-        td 1
-        td Disadvantage on ability checks
-      tr
-        td 2
-        td Speed halved
-      tr
-        td 3
-        td Disadvantage on attack rolls and saving throws
-      tr
-        td 4
-        td Hit point maximum halved
-      tr
-        td 5
-        td Speed reduced to 0
-      tr
-        td 6
-        td Death
-
-  h3 Food &amp; Water
-  h5 Food
-  p
-    | A character who goes for 3 + Con modifier days without eating 1 lb. of food suffers one level of exhaustion at the end of each day beyond that limit. A normal day of eating resets this counter to 0.
-  h5 Water
-  p
-    | A character needs 1 gallon of water per day, or 2 gallons in hot weather. A character who doesn't get enough to drink suffers a level of exhaustion at the ed of the day, or two levels of exhaustion if they are already exhausted. A character who drinks half the required amount can avoid this by succeeding on a DC 15 Con save.
-
-.page.columns.tall
-  h3.span-all Environment
-  h5 Suffocation
-  p
-    | A creature can hold its breath for 1 + Con modifier minutes (min. 30s). After that, a creature can survive without breathing for Con modifier rounds (min. 1). At the end of its next turn after that, it drops to 0 hp.
-  h5 Extreme Cold
-  p
-    | Below 0&#176;F, a creature must make a DC 10 Con save each hour or suffer 1 level of exhaustion. Creatures with cold resistance or immunity automatically succeed, as do creatures in cold weather gear or those naturally adapted to cold climates.
-  h5 Frigid Water
-  p
-    | After Con score minutes immersed in frigid water, a character must succeed on a DC 10 Con save every additional minute or gain 1 level of exhaustion. Creatures with cold resistance or immunity automatically succeed, as do those naturally adapted to cold water.
-  h5 Extreme Heat
-  p
-    | Above 100&#176;F, a creature without drinkable water must make a Con save  each hour or suffer 1 level of exhaustion. The DC starts at 5 and increases by 1 each hour. Creatures in medium or heavy armor or heavy clothing have disadvantage on the save. Creatures with fire resistance or immunity automatically succeed, as do those naturally adapted to hot climates.
-  h5 Strong Wind
-  p
-    | Imposes disadvantage on ranged weapon attacks and Wisdom (Perception) checks using hearing. Extinguishes open flames and disperses fog. A flying creature in a strong wind must land or fall at the end of its turn. Dust or sand in a strong wind also lightly obscures the area.
-  h5 Heavy Precipitation
-  p
-    | Lightly obscures the area. Imposes disadvantage on Wisdom (Perception) checks using hearing. Extinguishes open flames.
-  h5 High Altitude
-  p
-    | Traveling at altitudes above 10,000 ft. halves the distance a character can travel without exhaustion. Spending 30 days at this altitude acclimates a character and removes this penalty, but only up to 20,000 ft. unless they are native to that altitude.
-  h5 Slippery Ice
-  p
-    | Slippery ice is difficult terrain. When a creature moves onto slippery ice for the first time on a turn, it must succeed on a DC 10 Dexterity (Acrobatics) check or fall prone.
-  h5 Thin Ice
-  p
-    | Thin ice breaks in a 10-ft. area after 3d10 &times; 10 lbs.
-  h5 Desecrated Ground
-  p
-    | Undead on desecrated ground have advantage on all saving throws. A vial of holy water can purify a 10-ft. area, and the
-    span.spell<> hallow
-    | spell purifies desecrated ground.
-  h5 Razorvine
-  p
-    | A 10&times;10&times;5 ft. area of razorvine has AC 11, 25 hp, and immunity to bludgeoning, piercing, and psychic damage. When a creature comes into contact with razorvine for the first time on a turn, it must succeed on a DC 10 Dex save or take 5 (1d10) slashing damage.
-
-.page.columns.tall
+.divider
+section.columns
   h3 Tension Pool
   p
     | The tension pool is a pool of up to 6d6, which is used both for tracking time and generating consequences and complications. The tension pool allows the following actions:
@@ -376,7 +250,139 @@ title: Rules Reference
   P
     | Never clear the pool except as a result of adding a die.
 
-.page.columns.tall
+
+  h3 Movement
+  p
+    | One travel period is
+    span.emph< 4 hours
+    |. A party can normally travel 3 periods in a day, after which they need to rest overnight or risk exhaustion.
+  table
+    caption Travel Distance per Period
+    thead
+      tr
+        th Pace
+        th Distance
+        th Effect
+    tbody
+      tr
+        td Fast
+        td 10 miles
+        td Disadvantage on Wisdom (Perception)
+      tr
+        td Normal
+        td 8 miles
+        td &mdash;
+      tr
+        td Slow
+        td 6 miles
+        td Can stealth
+  h5 Difficult Terrain
+  p
+    | Dense forests, deep swamps, steep mountains, ice-covered ground, or other difficult terrain halves distance traveled. In tactical movement, it costs an extra 1 ft. of movement per 1 foot traveled in difficult terrain.
+  h5 Forced March
+  p
+    | The party can continue traveling after 3 consecutive periods, but they must make a DC 10 Con save or suffer a level of exhaustion. Each additional period increases the save DC by 5.
+
+  h5 Climbing, Swimming, Crawling
+  p
+    | Climbing or Swimming takes twice as much movement as walking unless a creature has a climb or swim speed.
+  p
+    | Crawling costs an extra 1 ft. of movement per foot traveled.
+  h5 Jumping
+  p
+    span.emph> High jump
+    | 3 + Str mod ft.;
+    span.emph<> long jump
+    | Str score ft.; half distance without 10 ft. running start.
+  p
+    | May require DC 10 Dex save to land in difficult terrain without falling prone.
+  h5 Standing
+  p
+    | Costs &#xbd; speed to stand up from prone.
+  h5 Squeezing
+  p
+    | Squeezing through a small space costs double movement, you have disadvantage on Dex saves, and attack rolls against you have advantage.
+
+  h3 Exhaustion
+  p Exhaustion is measured in six levels. The effects are cumulative. Finishing a long rest reduces a creature's exhaustion level by 1, provided that the creature has also ingested some food and drink.
+  table
+    caption Exhaustion Effects
+    thead
+      tr
+        th Level
+        th Effect
+    tbody
+      tr
+        td 1
+        td Disadvantage on ability checks
+      tr
+        td 2
+        td Speed halved
+      tr
+        td 3
+        td Disadvantage on attack rolls and saving throws
+      tr
+        td 4
+        td Hit point maximum halved
+      tr
+        td 5
+        td Speed reduced to 0
+      tr
+        td 6
+        td Death
+
+.divider
+section.columns
+  h3 Food &amp; Water
+  h5 Food
+  p
+    | A character who goes for 3 + Con modifier days without eating 1 lb. of food suffers one level of exhaustion at the end of each day beyond that limit. A normal day of eating resets this counter.
+  h5 Water
+  p
+    | A character needs 1 gallon of water per day, or 2 gallons in hot weather. A character who doesn't get enough to drink suffers a level of exhaustion at the ed of the day, or two levels of exhaustion if they are already exhausted. A character who drinks half the required amount can avoid this by succeeding on a DC 15 Con save.
+
+  h3 Environment
+  h5 Suffocation
+  p
+    | A creature can hold its breath for 1 + Con modifier minutes (min. 30s). After that, a creature can survive without breathing for Con modifier rounds (min. 1). At the end of its next turn after that, it drops to 0 hp.
+  h5 Extreme Cold
+  p
+    | Below 0&#176;F, a creature must make a DC 10 Con save each hour or suffer 1 level of exhaustion. Creatures with cold resistance or immunity automatically succeed, as do creatures in cold weather gear or those naturally adapted to cold climates.
+  h5 Frigid Water
+  p
+    | After Con score minutes immersed in frigid water, a character must succeed on a DC 10 Con save every additional minute or gain 1 level of exhaustion. Creatures with cold resistance or immunity automatically succeed, as do those naturally adapted to cold water.
+  h5 Extreme Heat
+  p
+    | Above 100&#176;F, a creature without drinkable water must make a Con save  each hour or suffer 1 level of exhaustion. The DC starts at 5 and increases by 1 each hour. Creatures in medium or heavy armor or heavy clothing have disadvantage on the save. Creatures with fire resistance or immunity automatically succeed, as do those naturally adapted to hot climates.
+  h5 Strong Wind
+  p
+    | Imposes disadvantage on ranged weapon attacks and Wisdom (Perception) checks using hearing. Extinguishes open flames and disperses fog. A flying creature in a strong wind must land or fall at the end of its turn. Dust or sand in a strong wind also lightly obscures the area.
+  h5 Heavy Precipitation
+  p
+    | Lightly obscures the area. Imposes disadvantage on Wisdom (Perception) checks using hearing. Extinguishes open flames.
+  h5 High Altitude
+  p
+    | Traveling at altitudes above 10,000 ft. halves the distance a character can travel without exhaustion. Spending 30 days at this altitude acclimates a character and removes this penalty, but only up to 20,000 ft. unless they are native to that altitude.
+  h5 Slippery Ice
+  p
+    | Slippery ice is difficult terrain. When a creature moves onto slippery ice for the first time on a turn, it must succeed on a DC 10 Dexterity (Acrobatics) check or fall prone.
+  h5 Thin Ice
+  p
+    | A 10-ft. area breaks after 3d10 &times; 10 lbs.
+  h5 Desecrated Ground
+  p
+    | Undead on desecrated ground have advantage on all saving throws. A vial of holy water can purify a 10-ft. area, and the
+    span.spell<> hallow
+    | spell purifies desecrated ground.
+  h5 Razorvine
+  p
+    | A 10&times;10&times;5 ft. area of razorvine has AC 11, 25 hp, and immunity to bludgeoning, piercing, and psychic damage. When a creature comes into contact with razorvine for the first time on a turn, it must succeed on a DC 10 Dex save or take 5 (1d10) slashing damage.
+
+.divider
+section.columns
+
+.divider
+section.columns
   h3 Concealment
   p
     | Creatures in a
