--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -335,6 +335,81 @@ aside {
 }
 
 .stat-block {
+    width: 50%;
+    font-size: 14px;
+    padding: 0.4em;
+    font-family: 'Scaly Sans', sans-serif;
+    .bar {
+        display: block;
+        width: 0;
+        height: 0;
+        border-top: 3px solid transparent;
+        border-bottom: 3px solid transparent;
+        border-left: 22.8rem solid $bg-dark;
+        margin: 3px 0;
+    }
+    .type, .spell, .magic, .i {
+        font-family: 'Scaly Sans Italic', sans-serif;
+        font-style: italic;
+    }
+    .subhead {
+        font-family: 'Scaly Sans Bold Italic', sans-serif;
+        font-style: italic;
+        font-weight: bold;
+    }
+    .features {
+        margin-top: 0.8rem;
+        margin-right: 0.4rem;
+    }
+    .actions {
+        margin-top: 0.8rem;
+        margin-right: 0.4rem;
+        h6 {
+            font-family: 'Scaly Sans Caps Bold', sans-serif;
+            font-weight: bold;
+            font-variant: small-caps;
+            border-bottom: 1px solid $bg-dark;
+            color: $bg-dark;
+            width: 98%;
+            font-size: 18px;
+            text-align: left;
+            margin: 0;
+        }
+        .action:not(:last-of-type) {
+            margin-bottom: 1em;
+        }
+    }
+}
+
+.stat-block.wide {
+    width: 100%;
+}
+
+.initiative-tracker {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    border-radius: 5px;
+    border: 1px solid $bg-dark;
+    margin-right: 0.8rem;
+    .initiative {
+        line-height: 1.5;
+        height: 2em;
+    }
+    .initiative:not(:last-child) {
+        border-bottom: 1px dotted $black;
+    }
+}
+
+.initiative-tracker + .stats {
+    width: 79%;
+    .head {
+        text-align: center;
+        border-bottom: 1px solid $bg-dark;
+    }
+    .health {
+        width: 100%;
+    }
 }
 
 .bg {
